<resources>
    <string name="app_name">calculadoraandroid</string>
    <string name="_3_4">3+4</string>
    <string name="_3_1">3+1</string>
    <string name="_4">4</string>
    <string name="ce">CE</string>
    <string name="parentese">(</string>
    <string name="parentesefechando">)</string>
    <string name="divisao">/</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="asterisco">*</string>
    <string name="num4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="menos">-</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="soma">+</string>
    <string name="_0">0</string>
    <string name="igual">=</string>
    <string name="ponto">.</string>
</resources>