<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/amarelo1"
    android:orientation="vertical"
    tools:context=".MainActivity">



    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="200dp">

        <TextView
            android:id="@+id/calculo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="3+4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="20sp"
            android:textSize="35sp"

            />
        <TextView
            android:id="@+id/resultado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/calculo"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textSize="45sp"

            />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">




        <TableRow
            android:layout_weight="1">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/ce"
                android:text="@string/ce"
                android:background="@color/vermelho"
                android:textColor="@color/white"
                android:layout_margin="2dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:textSize="30sp"


                />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/parenteseabrindo"
                android:text="@string/parentese"
                android:background="@color/vermelho"
                android:textColor="@color/white"
                android:layout_margin="2dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:textSize="30sp"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/parentesefechando"
                android:text="@string/parentesefechando"
                android:background="@color/vermelho"
                android:textColor="@color/white"
                android:layout_margin="2dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:textSize="30sp"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/divisao"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@color/vermelho"
                android:text="@string/divisao"
                android:textColor="@color/white"
                android:textSize="30sp"/>



        </TableRow>

        <TableRow
            android:layout_weight="1"
            >

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/sete"
                android:text="@string/_7"
                android:background="@color/verde"
                android:textColor="@color/white"
                android:layout_margin="2dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"

                />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/oito"
                android:text="@string/_8"
                android:background="@color/verde"
                android:textColor="@color/white"
                android:layout_margin="2dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/nove"
                android:text="@string/_9"
                android:background="@color/verde"
                android:textColor="@color/white"
                android:layout_margin="2dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/multiplicacao"
                android:text="@string/asterisco"
                android:background="@color/vermelho"
                android:textColor="@color/white"
                android:layout_margin="2dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:textSize="30sp"
                />






        </TableRow>
        <TableRow
            android:layout_weight="1"
            >

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/quatro"
                android:text="@string/num4"
                android:background="@color/verde"
                android:textColor="@color/white"
                android:layout_margin="2dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"

                />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/cinco"
                android:text="@string/_5"
                android:background="@color/verde"
                android:textColor="@color/white"
                android:layout_margin="2dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/seis"
                android:text="@string/_6"
                android:background="@color/verde"
                android:textColor="@color/white"
                android:layout_margin="2dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/subtracao"
                android:text="@string/menos"
                android:background="@color/vermelho"
                android:textColor="@color/white"
                android:layout_margin="2dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:textSize="30sp"
                />






        </TableRow>
        <TableRow
            android:layout_weight="1"
            >

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/um"
                android:text="@string/_1"
                android:background="@color/verde"
                android:textColor="@color/white"
                android:layout_margin="2dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/dois"
                android:text="@string/_2"
                android:background="@color/verde"
                android:textColor="@color/white"
                android:layout_margin="2dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"

                />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/tres"
                android:text="@string/_3"
                android:background="@color/verde"
                android:textColor="@color/white"
                android:layout_margin="2dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/adicao"
                android:text="@string/soma"
                android:background="@color/vermelho"
                android:textColor="@color/white"
                android:layout_margin="2dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:textSize="30sp"
                />






        </TableRow>
        <TableRow
            android:layout_weight="1"
            >

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/ponto"
                android:text="@string/ponto"
                android:background="@color/verde"
                android:textColor="@color/white"
                android:layout_margin="2dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"

                />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/zero"
                android:text="@string/_0"
                android:background="@color/verde"
                android:textColor="@color/white"
                android:layout_margin="2dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                />
            <ImageButton
                android:id="@+id/delete"
                android:importantForAccessibility="no"
                android:src="@drawable/ic_delete_24"
                android:background="@color/verde"
                android:textColor="@color/white"
                android:layout_margin="2dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/igual"
                android:text="@string/igual"
                android:background="@color/vermelho"
                android:textColor="@color/white"
                android:layout_margin="2dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                />






        </TableRow>
    </TableLayout>

</LinearLayout>
